// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OrderHistory Component should match snapshot 1`] = `
<div>
  <section
    class="order"
  >
    <OrderHistoryCards
      userOrders={
        Array [
          Object {
            "id": 1,
            "orderAddress": "52, Enitan str, Aguda, Surulere, Lagos State",
            "orderDate": "30 August, 2016",
            "orderNo": "12",
            "orderStatus": "Pending",
            "price": 5000,
          },
          Object {
            "id": 2,
            "orderAddress": "52, Enitan str, Aguda, Surulere, Lagos State",
            "orderDate": "Boiled Yam",
            "orderNo": "54",
            "orderStatus": "In Progress",
            "price": 1200,
          },
        ]
      }
    />
    <div
      class="pagination"
    >
      <a
        href="#"
      >
        «
      </a>
      <a
        class="active"
        href="#"
      >
        1
      </a>
      <a
        href="#"
      >
        2
      </a>
      <a
        href="#"
      >
        »
      </a>
    </div>
  </section>
</div>
`;

exports[`OrderHistory Component should match snapshot 2`] = `
<div>
  <section
    class="order"
  >
    <div
      class="container"
    >
      <div
        class="old-order"
      >
        User has not made any Order Yet
      </div>
    </div>
    <div
      class="pagination"
    >
      <a
        href="#"
      >
        «
      </a>
      <a
        class="active"
        href="#"
      >
        1
      </a>
      <a
        href="#"
      >
        2
      </a>
      <a
        href="#"
      >
        »
      </a>
    </div>
  </section>
</div>
`;
